<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/refri_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refrigerator"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/refri_temperature_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/refrigerator_temperature"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:textSize="20dp"/>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/refri_temperature_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:scrollbarSize="200dp">

    </androidx.appcompat.widget.AppCompatSeekBar>


    <TextView
        android:id="@+id/freezer_temperature_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/freezer_temperature"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:textSize="20dp"/>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/freezer_temperature_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:scrollbarSize="200dp">

    </androidx.appcompat.widget.AppCompatSeekBar>



    <TextView
        android:id="@+id/refri_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/refrigerator_mode"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/normal_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal" />


        <Button
            android:id="@+id/party_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/party"
            android:enabled="false" />

        <Button
            android:id="@+id/holiday_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holidays"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/cancel_text_view"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_room_creation"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textColor="@color/violet"
            android:background="@null"/>

        <TextView
            android:id="@+id/ok_text_view"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:text="@string/ok_room_creation"
            android:textColor="@color/violet"
            android:textSize="20dp" />

    </LinearLayout>



</LinearLayout>