<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/settings_title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/notifications"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/api_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:text="@string/api_desc"
        android:layout_margin="48dp"/>

    <TextView
        android:id="@+id/api_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/api_desc"
        android:textSize="22dp"
        android:text="@string/api_title" />


</RelativeLayout>