<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp">


    <TextView
        android:id="@+id/door_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/door"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/open_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:layout_marginStart="40dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginEnd="40dp"/>


    </LinearLayout>




    <Switch
        android:id="@+id/lock_unlock_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:textSize="15dp"
        android:text="@string/lock_unlock" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/cancel_text_view"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_room_creation"
            android:textSize="20dp"
            android:textColor="@color/violet"
            android:background="@null"/>

        <TextView
            android:id="@+id/ok_text_view"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:text="@string/ok_room_creation"
            android:textColor="@color/violet"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>