<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hciandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.example.hciandroid.ui.routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.hciandroid.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favs" />
    <!-- android:name="com.example.hciandroid.ui.roomFragments.RoomFragment" esto es para que llame a la lista de rooms-->
    <!-- android:name="com.example.hciandroid.ui.favorites.FavoritesFragment" esto para que se llame a la lista de favoritos -->


    <fragment
        android:id="@+id/safetyFragment"
        android:name="com.example.hciandroid.ui.security.SecurityFragment"
        android:label="@string/title_security"
        tools:layout="@layout/fragment_safety" />

    <fragment
        android:id="@+id/roomFragment"
        android:name="com.example.hciandroid.ui.roomFragments.RoomFragment"
        android:label="fragment_room"
        tools:layout="@layout/fragment_room" />
</navigation>