<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_new_room"
    android:padding="30dp">


    <TextView
        android:id="@+id/create_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/roomName"
        android:layout_below="@+id/create_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_room" />



    <TextView
        android:id="@+id/cancel_text_view"
        android:layout_below="@+id/roomName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_room_creation"
        android:textSize="20dp"
        android:textColor="@color/violet"
        android:background="@null" />

    <TextView
        android:id="@+id/ok_text_view"
        android:layout_below="@+id/roomName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_room_creation"
        android:textSize="20dp"
        android:textColor="@color/violet"
        android:background="@null" />


</RelativeLayout>