<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/change_code_dialog"
    android:layout_marginTop="20dp">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_security_code"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/new_password" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/cancel_text_view"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_room_creation"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textColor="@color/violet"
            android:background="@null"/>

        <TextView
            android:id="@+id/ok_text_view"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:text="@string/ok_room_creation"
            android:textColor="@color/violet"
            android:textSize="20dp" />

    </LinearLayout>


</LinearLayout>